@@ -250,6 +250,8 @@ linux (4.9.22-1) UNRELEASED; urgency=medium
     - rtmutex: Provide locked slowpath
     - rwsem/rt: Lift single reader restriction
   * crypto: ahash - Fix EINPROGRESS notification callback (CVE-2017-7618)
+  * Replace "[media] dvb-usb: Don't use stack for reset either" with upstream
+    fix
 
   [ Salvatore Bonaccorso ]
   * ping: implement proper locking (CVE-2017-2671)
